--- a/spie.html
+++ b/spie.html
@@ -16,8 +16,8 @@ SPIE
  <ul>
  <li><a href="index.html" class="w3-bar-item w3- button">Home</a></li>
  <li><a href="#" class="w3-bar-item w3- button">SPIE</a></li>
- <li><a href="Mythology.html" class="w3-bar-item w3- button">Mythology</a></li>
- <li><a href= "Superhero.html" class="w3-bar-item w3- button">Superhero</a></li>
+ <li><a href="mythology.html" class="w3-bar-item w3- button">Mythology</a></li>
+ <li><a href= "superhero.html" class="w3-bar-item w3- button">Superhero</a></li>
 </ul>
  
 
