--- a/mythology.html
+++ b/mythology.html
@@ -15,9 +15,9 @@ Mythology
  <center><div class ="w3-bar w3-border"><center>
  <ul>
  <li><a href="index.html" class="w3-bar-item w3- button">Home</a></li>
- <li><a href="SPIE.html" class="w3-bar-item w3- button">SPIE</a></li>
+ <li><a href="spie.html" class="w3-bar-item w3- button">SPIE</a></li>
  <li><a href="#" class="w3-bar-item w3- button">Mythology</a></li>
- <li><a href= "Superhero.html" class="w3-bar-item w3- button">Superhero</a></li>
+ <li><a href= "superhero.html" class="w3-bar-item w3- button">Superhero</a></li>
 </ul>
  
 <h2>The Religion of Uniqua</h2>
