--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ Uniqua
  <center><div class ="w3-bar w3-border"><center>
  <ul>
  <li><a href="#" class="w3-bar-item w3- button">Home</a></li>
- <li><a href="SPIE.html" class="w3-bar-item w3- button">SPIE</a></li>
- <li><a href="Mythology.html" class="w3-bar-item w3- button">Mythology</a></li>
- <li><a href= "Superhero.html" class="w3-bar-item w3- button">Superhero</a></li>
+ <li><a href="spie.html" class="w3-bar-item w3- button">SPIE</a></li>
+ <li><a href="mythology.html" class="w3-bar-item w3- button">Mythology</a></li>
+ <li><a href="superhero.html" class="w3-bar-item w3- button">Superhero</a></li>
 </ul>
  
 
