--- a/superhero.html
+++ b/superhero.html
@@ -13,8 +13,8 @@ Superhero
  <center><div class ="w3-bar w3-border"><center>
  <ul>
  <li><a href="index.html" class="w3-bar-item w3- button">Home</a></li>
- <li><a href="SPIE.html" class="w3-bar-item w3- button">SPIE</a></li>
- <li><a href="Mythology.html" class="w3-bar-item w3- button">Mythology</a></li>
+ <li><a href="spie.html" class="w3-bar-item w3- button">SPIE</a></li>
+ <li><a href="mythology.html" class="w3-bar-item w3- button">Mythology</a></li>
  <li><a href= "#" class="w3-bar-item w3- button">Superhero</a></li>
 </ul>
  
