--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ Uniqua
  
 
 <h2>Uniqua</h2>
-  <center><img src="images/Dont Matter.PNG" alt="" />
+  <center><img src="images/dont matter.PNG" alt="" />
 <p>Uniqua is a civilization that set forth mordern civilization that are seen today we aspired to thrive at almsot every aspect we can, and have a prosperous civilization for their citizens. The name for Uniqua came from the fact that it is different and unique compared to a lot of the other nations. In our prosperous civilization everything from our social views to our Economical ones make our civilization prosperous. We try to always make adjusments to our civilization for the the better of the people to make our civilaztion the best for the people.
 </div>
 <center><img src="images/df.PNG" height=38% width=54%>
-<img src="images/capturel.PNG" height=25% width=31%>
+<img src="images/Capturel.PNG" height=25% width=31%>
 
 
 
